kubernetesPrep/ingress2/webdeployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-app-deployment-2
  labels:
    app: hello-world-app-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-app-2
  template:
    metadata:
      labels:
        app: hello-world-app-2
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:2.0
        imagePullPolicy: IfNotPresent
        name: hello-world-app
        ports:
        - containerPort: 8080
          protocol: TCP
      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
        tolerationSeconds: 300
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 300
