kubernetesPrep/ingress2/webservice1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world-app
  name: hello-world-app-service
  namespace: default
spec:
  ports:
  - nodePort: 30417
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-world-app
  type: NodePort
