kubernetesPrep/ingress2/webservice2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world-app-2
  name: hello-world-app-service-2
  namespace: default
spec:
  ports:
  - nodePort: 30117
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-world-app-2
  type: NodePort
